syntax = "proto3";
package anytype;
option go_package = "github.com/anyproto/anytype-heart/pb";

import "pkg/lib/pb/model/protos/models.proto";
import "pb/protos/changes.proto";

message SnapshotWithType {
  anytype.model.SmartBlockType sbType = 1;
  anytype.Change.Snapshot snapshot = 2;
}

message Profile {
  string name = 1;
  string avatar = 2;
  string address = 4;
  string spaceDashboardId = 5;
  string profileId = 6;
  string analyticsId = 7;
}
